syntax = "proto3";

package edu.uci.ics.amber.engine.architecture.worker;

import "edu/uci/ics/amber/engine/architecture/sendsemantics/partitionings.proto";
import "edu/uci/ics/amber/engine/common/virtualidentity.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
    scope: FILE,
    preserve_unknown_fields: false
    no_default_values_in_constructor: true
};

message StartWorkerV2 {}

message PauseWorkerV2 {}

message ResumeWorkerV2 {}

message SchedulerTimeSlotEventV2 {
    bool time_slot_expired = 1;
}

message OpenOperatorV2 {}

message UpdateInputLinkingV2 {
    common.ActorVirtualIdentity identifier = 1 [(scalapb.field).no_box = true];
    common.LinkIdentity input_link = 2 [(scalapb.field).no_box = true];
}

message AddPartitioningV2 {
    common.LinkIdentity tag = 1 [(scalapb.field).no_box = true];
    architecture.sendsemantics.Partitioning partitioning = 2 [(scalapb.field).no_box = true];
}

message WorkerExecutionCompletedV2 {
}

message QueryStatisticsV2 {
}

message QueryCurrentInputTupleV2 {
}

message LocalOperatorExceptionV2 {
    string message = 1;
}

message InitializeOperatorLogicV2 {
    string code = 1;
    repeated common.LinkIdentity upstreamLinkIds = 2;
    bool is_source = 3;
    map<string, string> output_schema = 4;
}

message ModifyOperatorLogicV2 {
    string code = 1;
    bool is_source = 2;
}

message ReplayCurrentTupleV2 {
}

message PythonPrintV2 {
    string message = 1;
}

message EvaluateExpressionV2 {
    string expression = 1;
}

message QuerySelfWorkloadMetricsV2{
}

message LinkCompletedV2 {
    common.LinkIdentity link_id = 1 [(scalapb.field).no_box = true];
}

message ControlCommandV2 {
    oneof sealed_value {
        StartWorkerV2 start_worker = 1;
        PauseWorkerV2 pause_worker = 2;
        ResumeWorkerV2 resume_worker = 3;

        AddPartitioningV2 add_partitioning = 4;
        UpdateInputLinkingV2 update_input_linking = 5;

        QueryStatisticsV2 query_statistics = 6;
        QueryCurrentInputTupleV2 query_current_input_tuple = 7;

        LocalOperatorExceptionV2 local_operator_exception = 8;

        OpenOperatorV2 open_operator = 9;
        LinkCompletedV2 link_completed = 10;

        SchedulerTimeSlotEventV2 scheduler_time_slot_event = 11;

        InitializeOperatorLogicV2 initialize_operator_logic = 21;
        ModifyOperatorLogicV2 modify_operator_logic = 22;
        PythonPrintV2 python_print = 23;
        ReplayCurrentTupleV2 replay_current_tuple = 24;
        EvaluateExpressionV2 evaluate_expression = 25;

        QuerySelfWorkloadMetricsV2 query_self_workload_metrics = 41;

        WorkerExecutionCompletedV2 worker_execution_completed = 101;
    }

}

